fix: add overflow hidden to intro

--- a/src/components/intro.module.scss
+++ b/src/components/intro.module.scss
@@ -9,6 +9,8 @@
   background-repeat: no-repeat;
   background-position: bottom;
 
+  overflow: hidden;
+
   del {
     color: #444;
 
